add sections parents mom/dad and invitation

--- a/index.html
+++ b/index.html
@@ -47,6 +47,49 @@
         </div>
       </div>
     </section>
+    <div class="invitation">
+      <div class="container">
+        <p class="invitation-text">Dear Guests!</p>
+        <p class="invitation-text">We will be glad to see you at our Baby shower party!</p>
+        <p class="invitation-text">We're gonna have a little party with the closest friends and relatives.</p>
+        <p class="invitation-text">Let’s sprinkle Jane with good fortune for her growing family!</p>
+        <p class="invitation-text">Please RSVP until June 10.</p>
+      </div>
+    </div>
+    <section class="parents parents-mom" id="parents">
+      <div class="container parents-container">
+        <div class="parents-inner">
+          <img class="parents-img" src="img/parents/mom.png" alt="Photo Mom">
+          <div class="parents-content">
+            <h2 class="title parents-title">Mom</h2>
+            <div class="parents-description">
+              <p class="parents-text">Jane believes that their first child will be a girl!</p>
+              <p class="parents-text">She has already started to buy nice pink baby things.</p>
+              <p class="parents-text">Is the future mother right?</p>
+            </div>
+            <p class="parents-congrats">Congratulations to future mom!</p>
+            <p class="parents-name">Jane Smith</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="parents parents-dad">
+      <div class="container parents-container">
+        <div class="parents-inner parents-inner-dad">
+          <div class="parents-content">
+            <h2 class="title parents-title">Dad</h2>
+            <div class="parents-description">
+              <p class="parents-text">John thinks that their first child will be a boy!</p>
+              <p class="parents-text">He has already planned to buy a dark-blue baby car.</p>
+              <p class="parents-text">Is the future father right?</p>
+            </div>
+            <p class="parents-congrats">Congratulations to future dad!</p>
+            <p class="parents-name">John Smith</p>
+          </div>
+          <img class="parents-img" src="img/parents/dad.png" alt="Photo Dad">
+        </div>
+      </div>
+    </section>
   </main>
   <script src="js/burger.js"></script>
 </body>
