add section when

--- a/index.html
+++ b/index.html
@@ -90,6 +90,29 @@
         </div>
       </div>
     </section>
+    <section class="when">
+      <div class="container">
+        <h2 class="title when-title">The party starts in...</h2>
+        <div class="countdown">
+          <div class="countdown-item">
+            <div class="countdown-item-numbers" id="days">00</div>
+            <div class="countdown-item-time">DAYS</div>
+          </div>
+          <div class="countdown-item">
+            <div class="countdown-item-numbers" id="hours">00</div>
+            <div class="countdown-item-time">HOURS</div>
+          </div>
+          <div class="countdown-item">
+            <div class="countdown-item-numbers" id="minutes">00</div>
+            <div class="countdown-item-time">MINUTES</div>
+          </div>
+          <div class="countdown-item">
+            <div class="countdown-item-numbers" id="seconds">00</div>
+            <div class="countdown-item-time">SECONDS</div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <script src="js/burger.js"></script>
 </body>
