add cowntdown.js to section when

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
       </div>
     </section>
-    <section class="when">
+    <section class="when" id="when">
       <div class="container">
         <h2 class="title when-title">The party starts in...</h2>
         <div class="countdown">
@@ -115,6 +115,7 @@
     </section>
   </main>
   <script src="js/burger.js"></script>
+  <script src="js/countdown.js"></script>
 </body>
 
 </html>
