add sction where

--- a/index.html
+++ b/index.html
@@ -113,6 +113,20 @@
         </div>
       </div>
     </section>
+    <section class="where">
+      <div class="container">
+        <h2 class="title where-title">Address</h2>
+        <div class="where-address">
+          <p class="where-address-text">The Smith Home, 106 N 1st St</p>
+          <p class="where-address-text">Brooklyn, NY 11249, USA.</p>
+        </div>
+        <div class="where-map">
+          <iframe class="where-map-iframe"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d378.0135882553466!2d-73.96299486554452!3d40.715623391813324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2596104f14e55%3A0x7de705c079aa0aec!2s106%20N%201st%20St%2C%20Brooklyn%2C%20NY%2011249%2C%20USA!5e0!3m2!1sen!2sua!4v1670278112023!5m2!1sen!2sua"
+            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </section>
   </main>
   <script src="js/burger.js"></script>
   <script src="js/countdown.js"></script>
