--- a/index.html
+++ b/index.html
@@ -128,6 +128,17 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="container footer-container">
+      <a class="logo footer-logo" href="#">
+        <img class="footer-logo-img" src="img/icon/logo.svg" alt="Logo Baby Shower">
+      </a>
+      <div class="footer-info">
+        <p class="footer-info-text">If you have any questions, write or call us</p>
+        <a class="footer-phone" href="tel:12340000000">+1-(234)-000-00-00</a>
+      </div>
+    </div>
+  </footer>
   <script src="js/burger.js"></script>
   <script src="js/countdown.js"></script>
 </body>
