--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
       </div>
     </section>
-    <section class="where">
+    <section class="where" id="where">
       <div class="container">
         <h2 class="title where-title">Address</h2>
         <div class="where-address">
